fix: decreased whitespace to increase image size
Decreased whitespace to increase image size, added whitespace to top

--- a/css/styles.css
+++ b/css/styles.css
@@ -158,7 +158,7 @@ nav h1 a {
   box-shadow:0 2px 4px rgba(0,0,0,0.2);
   font-family: Arial,sans-serif;
   margin: 15px;
-  padding: 0 30px 25px;
+  padding: 15px;
   text-align: left;
   
 }
